sec 4: memory management

--- a/preamble.tex
+++ b/preamble.tex
@@ -253,6 +253,7 @@
 % Shorthand for inline code fragments
 %
 \newcommand{\code}[1]{\lstinline[style=inline]{#1}}
+\newcommand{\footcode}[1]{\lstinline[style=inline,basicstyle=\scriptsize\sourcecodepro]{#1}}
 
 
 % Chapter page style
