add 'do' to haskell syntax highlighting

--- a/preamble.tex
+++ b/preamble.tex
@@ -203,9 +203,9 @@
     language=Haskell,
     upquote=true,
     basicstyle=\scriptsize\sourcecodepro,
-    deletekeywords={case,class,data,default,deriving,in,instance,let,of,type,where},
+    deletekeywords={case,class,data,default,deriving,do,in,instance,let,of,type,where},
     morekeywords={[2]class,data,default,deriving,family,instance,type,where},
-    morekeywords={[3]in,let,case,of},
+    morekeywords={[3]in,let,case,of,do},
     literate=
         {\\}{{$\lambda$}}1
         {\\\\}{{\char`\\\char`\\}}1
